# gstreamer_learn

./: CMakeLists.txt
audio_player/: CMakeLists.txt  audio_player.c  playbin_way.c
cmake/: FindGStreamer.cmake
direct_show/: CMakeLists.txt  direct_show.c
dynamic_hello_world/: CMakeLists.txt  basic-tutorial-3.c
gstCamera/: CMakeLists.txt  gstCamera.cpp  gstCamera.h  main.cpp
gstDecoder/: CMakeLists.txt  gstDecoder.cpp  gstDecoder.h  main.cpp
gstreamer_discoverer/: CMakeLists.txt  basic-tutorial-9.c
hello_world/: CMakeLists.txt  basic-tutorial-1.c
manual_hello_world/: CMakeLists.txt  basic-tutorial-2.c
media_player_in_GTK/: CMakeLists.txt  basic-tutorial-5.c
multilingual_player/: CMakeLists.txt  playback-tutorial-1.c
network_resilient/: CMakeLists.txt  basic-tutorial-12.c
playbin_waveform_generator/: CMakeLists.txt  playback-tutorial-3.c
seeking_example/: CMakeLists.txt  basic-tutorial-4.c
subtitle_management/: CMakeLists.txt  playback-tutorial-2.c
